--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
     testImplementation 'io.qameta.allure:allure-selenide:2.16.1'
+
+    testImplementation 'io.rest-assured:rest-assured:4.3.3'
+    testImplementation 'com.google.code.gson:gson:2.8.6'
 }
 
 test {
